--- a/render.yaml
+++ b/render.yaml
@@ -12,26 +12,10 @@ services:
         value: production
       - key: PORT
         value: 5000
-      - key: DB_HOST
+      - key: DATABASE_URL
         fromDatabase:
           name: kenmark-db
-          property: host
-      - key: DB_PORT
-        fromDatabase:
-          name: kenmark-db
-          property: port
-      - key: DB_USER
-        fromDatabase:
-          name: kenmark-db
-          property: user
-      - key: DB_PASSWORD
-        fromDatabase:
-          name: kenmark-db
-          property: password
-      - key: DB_NAME
-        fromDatabase:
-          name: kenmark-db
-          property: database
+          property: connectionString
       - key: JWT_SECRET
         generateValue: true
       - key: JWT_EXPIRES_IN
