--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "axios": "^1.6.2",
-    "date-fns": "^2.30.0"
-  },
-  "devDependencies": {
+    "date-fns": "^2.30.0",
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.8"
+  },
+  "devDependencies": {
   },
   "browserslist": {
     "production": [
