Fix terser issue - use esbuild minifier instead

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "terser": "^5.16.1"
   },
   "devDependencies": {
   },
