Rebrand to Kenmark System - remove all documentation files, keep only code

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
-DB_NAME=psdprs_db
+DB_NAME=kenmark_db
 DB_PORT=3306
 
 JWT_SECRET=your-secret-key-change-this-must-be-at-least-32-characters-long
