--- a/.env.production.example
+++ b/.env.production.example
@@ -3,7 +3,7 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=your-secure-password-here
-DB_NAME=psdprs_db
+DB_NAME=kenmark_db
 
 # JWT Configuration
 JWT_SECRET=your-very-long-and-secure-jwt-secret-key-at-least-32-characters
