--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "psdprs-backend",
+  "name": "kenmark-backend",
   "version": "1.0.0",
-  "description": "Print Shop Daily Production & Revenue System - Backend",
+  "description": "Kenmark System - Backend",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/migrations/run.js --seed && node src/server.js",
     "dev": "nodemon src/server.js",
     "build": "cd frontend && npm install --production=false --legacy-peer-deps && npm run build",
     "prod": "pm2 start ecosystem.config.js --env production",
-    "prod:stop": "pm2 stop psdprs-backend",
-    "prod:restart": "pm2 restart psdprs-backend",
-    "prod:logs": "pm2 logs psdprs-backend",
+    "prod:stop": "pm2 stop kenmark-backend",
+    "prod:restart": "pm2 restart kenmark-backend",
+    "prod:logs": "pm2 logs kenmark-backend",
     "test": "jest --coverage",
     "migrate": "node src/migrations/run.js",
     "migrate:safe": "node src/migrations/run.js || echo 'Migrations already applied'",
