--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,10 +3,10 @@ version: '3.8'
 services:
   mysql:
     image: mysql:8.0
-    container_name: psdprs-mysql
+    container_name: kenmark-mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: psdprs_db
+      MYSQL_DATABASE: kenmark_db
     ports:
       - "3306:3306"
     volumes:
